my second commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-
+<h2>My name is parth patel and i am a full stack developer...! </h2>
 </body>
 </html>
