--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
+<h1>My name is parth patel and i am a full stack developer...!</h1>
 
 </body>
 </html>
